edited calendar currently details, attempt fix modal x button, removed whitespace nowrap to now happening details scss

--- a/src/components/LandingPage/CalendarSection/CalendarModal/CalendarModal.module.scss
+++ b/src/components/LandingPage/CalendarSection/CalendarModal/CalendarModal.module.scss
@@ -40,8 +40,8 @@
     background: none;
     box-shadow: none;
     position: absolute !important;
-    color: rgba(0, 0, 0, 0.6);
-    font-weight: 900;
+    color: rgba(0, 0, 0, 0.6) !important;
+    font-weight: 900 !important;
 
     &:hover {
         background: none;
