--- a/src/components/LandingPage/HeroSection/NowHappening/NowHappeningContent/NowHappeningContent.module.scss
+++ b/src/components/LandingPage/HeroSection/NowHappening/NowHappeningContent/NowHappeningContent.module.scss
@@ -48,10 +48,13 @@
     .details {
         
         h2 {
+            text-align: center;
             font-size: 0.75rem;
         }
         
         .lower {
+            display: flex;
+            justify-content: center;
             h4 {
                 font-size: 0.65rem;
             }
